# Artist_Management_System

./: README.md
backend/: pyproject.toml
backend/artist_mng/: db.sqlite3  manage.py  package-lock.json  package.json
backend/artist_mng/artist_mng/: asgi.py  settings.py  urls.py  wsgi.py
backend/artist_mng/songs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/artist_mng/songs/migrations/: 0001_initial.py
backend/artist_mng/users/: _views.py  apps.py  managers.py  models.py  permission.py  serializers.py  urls.py  views.py
backend/artist_mng/users/migrations/: 0001_initial.py
backend/artist_mng/users/views/: __init__.py  create.py
frontend/vue-project/: package-lock.json  package.json  tailwind.config.js
frontend/vue-project/src/: App.vue  axios.js  main.js
frontend/vue-project/src/components/: Admin_Account.vue  Admin_Dash.vue  Admin_song_add.vue  AllSongsDetail.vue  ArtistSongCreate.vue  Artist_Account.vue  Artist_Dash.vue  Artist_song_add.vue  Display_Artist.vue  Edit_Artist.vue  LogIn.vue  Manage_Artists.vue  More_Songs.vue  NavigationArtist.vue  NavigationBar.vue  NavigationLogin.vue  SideBar.vue  SideBarArtist.vue  SignUp.vue  SongPop.vue  Songs.vue
frontend/vue-project/src/router/: index.js
